--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./css/demo.css" rel="stylesheet">
   <title>静态资源库</title>
 </head>
 <body>
-  Success
+  <script src="./js/demo.js"></script>
 </body>
 </html>
