--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>静态资源库</title>
 </head>
 <body>
+  <div id="juede_adDiv" data-docversion="179" data-translate="biYing" data-version="1.0.0"> 
+    <div id="adDivContent">
+     本帮助文档是使用
+     <a href="http://www.bing.com/translator/" target="_blank">《必应翻译》</a>翻译，请与英文版配合使用 by--QQ:654638585 
+     <div>
+      <div></div>
+     </div>
+    </div>
+   </div>
   <script src="./js/demo.js"></script>
+  <script src="./js/jdk9/index.js"></script>
 </body>
 </html>
